# hermes-log-analyst

./: .gitignore  CHANGELOG.md  CHANGES.md  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
scripts/: tauri-runner.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crash.rs  db.rs  diagnostics.rs  llm.rs  main.rs  remote_common.rs  remote_macos.rs  remote_windows.rs  settings.rs
src-tauri/src/logs/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Button.tsx
src/lib/: backend.ts  crashAnalysis.test.ts  crashAnalysis.ts  export.ts  filters.ts  import.ts  llmProfiles.test.ts  llmProfiles.ts  llmPrompt.test.ts  llmPrompt.ts
src/types/: events.ts
